Fix mobile layout: input fields overflow container due to content-box sizing
Added box-sizing: border-box to form inputs and removed inline width: 40em
styles from add.jsp. Also added input[type='url'] to form styling rules.

--- a/src/main/webapp/sass/_base.scss
+++ b/src/main/webapp/sass/_base.scss
@@ -464,21 +464,25 @@ textarea.error {
     padding:0;
 }
 
-#commentForm {
+#commentForm, #messageForm {
   margin-top: 0.5em;
   font-size: 1rem;
 
   textarea {
     height: 10em;
     width: 100%;
+    box-sizing: border-box;
   }
 
-  input[type='text'] {
+  input[type='text'],
+  input[type='url'] {
     width: 100%;
+    box-sizing: border-box;
   }
 
   input[type="password"] {
-    width: 40em;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   @include respond-to(tablet-and-desktops) {
@@ -489,7 +493,8 @@ textarea.error {
   }
 
   @include respond-to(desktops) {
-    input[type="text"] {
+    input[type="text"],
+    input[type="url"] {
       width: 40em;
     }
   }
